This actually works

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,30 @@
+base_model: BSC-LT/salamandra-2b-instruct
+project_name: Vitalka
+json_path: result.json
+
+hub:
+  username: Tatanos
+  token: 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
+  push_to_hub: true
+
+params:
+  block_size: 512
+  model_max_length: 2048
+  max_prompt_length: 256
+  epochs: 1
+  batch_size: 1
+  lr: 3e-5
+  peft: true
+  quantization: int4
+  target_modules: all-linear
+  padding: right
+  optimizer: adamw_torch
+  scheduler: linear
+  gradient_accumulation: 2
+  mixed_precision: fp16
+
+
 task: llm-sft
-base_model: mistralai/Mistral-Small-24B-Instruct-2501
-project_name: Mistral-Nemo-Vitalka
 log: tensorboard
 backend: local
 
@@ -11,24 +35,3 @@ data:
   chat_template: tokenizer
   column_mapping:
     text_column: massage
-
-params:
-  block_size: 1024
-  model_max_length: 8192
-  max_prompt_length: 512
-  epochs: 20
-  batch_size: 2
-  lr: 3e-5
-  peft: true
-  quantization: int4
-  target_modules: all-linear
-  padding: right
-  optimizer: adamw_torch
-  scheduler: linear
-  gradient_accumulation: 4
-  mixed_precision: fp16
-
-hub:
-  username: Tatanos
-  token: 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
-  push_to_hub: true
